--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <meta http-equiv="refresh" content="URL=http://80.78.254.73/" />
+  <meta http-equiv="refresh" content="0;URL=http://80.78.254.73/" />
 <body>
   Hello World!
 </body>
